# sistema_de_recomendacao_api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: router.py
app/api/routes/: collaborative.py  dataset.py  health.py  recommend.py
app/data/: data_store.py  loader.py  preprocessing.py
app/recommender/: collaborative.py  content_based.py  hybrid.py  model_store.py  popularity.py
data/processed/: ratings_harmonized.csv  ratings_sample.csv
reports/: model_evaluation.md
scripts/: analize_popularity.py  analyze_user_activity.py  check_content_fields.py  check_ratings.py  clean_books.py  evaluate_popularity_baseline.py  evaluate_svd.py  find_active_users.py  generate_sample.py  harmonize_ratings.py  profiles_data.py  test_adaptive_recommender.py  test_collaborative.py  test_content_model.py  test_hybrid.py  test_svd.py  validate_harmonize.py  validate_mapping.py
tests/: test_collaborative.py  test_content_based.py  test_data_loader.py  test_hybrid.py
