[project]
name = "projeto-sistema-recomendacao-api"
version = "0.1.0"
description = "Sistema híbrido de recomendação de livros"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "httpx",
    "numpy",
    "pandas",
    "pytest",
    "python-dotenv",
    "scikit-learn",
    "scikit-surprise",
    "uvicorn[standard]",
]
